5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_996.log
== SUBMITION (2019-04-01 14:44:27) 
-- CODE:
print(" ***** ")
print(" (* o o * ) ")
print(" * ^ * ")
print(" * --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.173429
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 (* o o * ) 
 * ^ * 
 * --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:45:03) 
-- CODE:
print("*****")
print("(* o o * )")
print("* ^ *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.249084
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o * )
* ^ *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:47:05) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" * ^  *  ")
print("  *---*"  )
print("  ***** ")
-- EXECUTION TIME:
0.151844
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
 * ^  *  
  *---*
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:00) 
-- CODE:
print(*****)
print((* o o *))
print(* ^ *)
print(* --- *)
print(*****)
-- EXECUTION TIME:
0.227846
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:50) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.103965
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
